vote cote front

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="col align-self-end">
+    <button class="btn btn-dark" routerLink="/auth" routerLinkActive="active-link">Connexion</button>
       <button class="btn btn-dark" routerLink="/logout" routerLinkActive="active-link" (click)=deconnecter()>Deconnexion</button>
     </div>
 
