--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -18,8 +18,8 @@
         <img class="card-img-top" src="{{coll.photoUrl}}">
 
         <div class="card-footer">
-          <img src="https://i.pinimg.com/originals/85/65/50/856550aa773911d00b76b24aaa4bc467.png" width="50" heigth="50"(click)="votePlus(coll.matricule, coll.score)" />
-          <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Very_sad_emoji_icon_png_grande.png" width="50"heigth="50" (click)="voteMoins(coll.matricule, coll.score)" />
+          <img src="https://i.pinimg.com/originals/85/65/50/856550aa773911d00b76b24aaa4bc467.png" width="50" heigth="50"(click)="votePlus(coll.matricule)" />
+          <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Very_sad_emoji_icon_png_grande.png" width="50"heigth="50" (click)="voteMoins(coll.matricule)" />
         </div>
 
       </div>
