debug front+back p1

--- a/src/app/authentification/authentification.component.html
+++ b/src/app/authentification/authentification.component.html
@@ -30,7 +30,7 @@
       
       <br/>
 
-      <button type="submit" class="btn btn-primary" routerLink="/vote" routerLinkActive="active-link">Valider</button>
+      <button type="submit" class="btn btn-primary" routerLink="/vote" routerLinkActive="active-link" (clic)="validerAuth()">Valider</button>
     </form>
 
   </div>
